2001-08-30  Elliot Glaysher  <glaysher@umich.edu>

	* doc/Modify_Webpage_Creation-HOWTO.html: First draft for update.

2001-08-30  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* Netcomics/HTML/Page.pm: Made debugging output printed to stderr.
	* Netcomics/HTML/Set.pm: Made debugging output printed to stderr.
	* Netcomics/*.pm: Standardized emacs local variables to the end.

2001-08-29  Elliot Glaysher  <glaysher@umich.edu>

	* Netcomics/HTML/Set.pm: Fix bad stuff with generating the index.
	(Thanks for the head's up, Ben!)

2001-08-26  Elliot Glaysher  <eglayshe@umich.edu>

	* Netcomics/HTML/Page.pm: Initial commit
	* Netcomics/HTML/Set.pm: Initial commit
	* Netcomics/HTML/Themes/Default.pm: Initial commit
	* Netcomics/HTML.pm: Modified to be obsolete for now. Future revisions
	will make this a wrapper around Netcomics/HTML/*.
	* Netcomics/Config.pm.in: Fixed *really*dumb* spelling errors in
	the "$seperate_comics" variable that were causing headaches.
	* netcomics: Modified to use Netcomics/HTML/*
	* Makefile.PL: Modified to install the HTML/* modules, but to still
	keep the old html_tmpl.
	* MANIFEST: (Pretty much the same as Makefile.PL)

2001-08-19  Elliot Glaysher  <eglayshe@umich.edu>

	* Netcomics/GtkComics.pm (about_Form): Updated about text so it
	actually made sense.

2001-08-13  Elliot Glaysher  <eglayshe@umich.edu>

	* netcomics: Updated so that in -P, things work if @selected_comics
	== 0.

2001-08-12  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* Makefile.PL (constants): Added replacing the INSTALLMAN*DIR
	definitions with $(PREFIX) instead of the configured_prefix value
	to make up for old versions of ExtUtils/MM_Unix.pm.

2001-08-09  Elliot Glaysher  <eglayshe@umich.edu>

	* Netcomics/Factory.pm (new): Have you ever noticed how changing one
	line of code can affect the whole program? FINALLY fixed import of
	comics with multiple images.

2001-08-08  Elliot Glaysher  <eglayshe@umich.edu>
